<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="327dp"
        android:text="@string/buttonPlusText"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:text="@string/ButtonMinusText"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toTopOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:text="@string/buttonMultiplyText"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus"
        app:layout_constraintTop_toTopOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:text="@string/ButtonDivideText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMultiply"
        app:layout_constraintTop_toTopOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonModulo"
        android:layout_width="163dp"
        android:layout_height="74dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="471dp"
        android:text="@string/ButtonModuloText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/blankOne"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="91dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/placeholderNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/blankTwo"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="223dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/placeholderNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="36dp"
        android:text="@string/firstTextViewText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="168dp"
        android:text="@string/secondTextViewText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thirdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_result_is"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thirdTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

</androidx.constraintlayout.widget.ConstraintLayout>